# rubik-table

./: LICENSE  README.md
2d/rth/: common.py  generate.py  ilp.py  irubik13.py  irubik13_obs.py  local3x3.json  local3x3_uniform_obs_db.json  motion_primitive.py  mp_obs.py  path_refine.py  visualize2.py
2d/rth/demo/: block_demo.yaml  block_demo_small.yaml  column_demo.yaml  column_demo_small.yaml  demo.yaml  demo_block_large.yaml  demo_block_small.yaml  demo_column_large.yaml  demo_full_6x6.yaml  demo_obs_large.yaml  demo_obs_small.yaml  demo_random.yaml  demo_random_large.yaml  demo_random_small.yaml  demo_rth_36x48.path  demo_rth_36x48.yaml  demo_small_obs.yaml  demo_square.yaml  output_6x6.yaml  output_block_small.yaml  output_column.yaml  output_column_small.yaml  output_obs_small.yaml  output_random.yaml  output_random_small.yaml  output_random_small_better.yaml  output_small_obs.yaml  run.sh  run2.sh  small.yaml  small_demo.yaml  sorting_demo.yaml  test.yaml  visualize.py  visualize2.py
2d/rtlm/: CMakeLists.txt  common.cpp  common.h  formation.cpp  labp.cpp  labp.h  main.cpp  mapf_post.cpp  mapf_post.h  mp.cpp  mp.h  rubik.h  rubik12.cpp  rubik12.h  rubik13.cpp  rubik13.h  rubikILP.cpp  rubikILP.h  rubik_obs.cpp  rubik_obs.h  search.cpp  search.h  test.cpp  umapf.cpp  umapf.h
2d/rtm/: demo_full_48x72.yaml  demo_full_6x6.yaml  output_6x6.yaml  prubik4x2.py  readme.md
3d/: CMakeLists.txt  common.cpp  common.hpp  data2d_obs.json  main.cpp  rth2d.cpp  rubik3d.cpp  rubik3d.hpp  test.txt
3d/example/: 24_rec_9.scen
